--- a/SpringRadis/build.gradle
+++ b/SpringRadis/build.gradle
@@ -1,5 +1,5 @@
 plugins {
-	id 'org.springframework.boot' version '2.3.1.RELEASE'
+	id 'org.springframework.boot' version '2.1.7.RELEASE'
 	id 'io.spring.dependency-management' version '1.0.9.RELEASE'
 	id 'java'
 }
@@ -15,14 +15,17 @@ repositories {
 ext {
 
 	jedisVersion = '2.9.3'
-	set('springCloudVersion', "Hoxton.SR6")
+	gsonVersion = '2.8.5'
+	set('springCloudVersion', "Greenwich.SR3")
 	
 }
 
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
-	implementation 'org.springframework.cloud:spring-cloud-starter-config'
+	//implementation 'org.springframework.cloud:spring-cloud-starter-config'
+	implementation 'org.springframework.boot:spring-boot-starter-actuator'
+	implementation 'org.springframework.boot:spring-boot-devtools:2.1.7.RELEASE'
 	
 	testImplementation('org.springframework.boot:spring-boot-starter-test') {
 		exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
@@ -30,6 +33,10 @@ dependencies {
 	
 	implementation ("org.springframework.data:spring-data-redis")
 	implementation ("redis.clients:jedis:${jedisVersion}")
+	implementation ("it.ozimov:embedded-redis:0.7.2")
+	
+		implementation ("com.google.code.gson:gson:${gsonVersion}")
+		compile "com.google.guava:guava:16+"
 }
 
 dependencyManagement {
