--- a/SpringRadis/src/main/resources/application.properties
+++ b/SpringRadis/src/main/resources/application.properties
@@ -1,1 +1,6 @@
+server.port=8085
+spring.application.name=demo
+management.endpoints.enabled-by-default=true
 
+spring.redis.host=localhost
+spring.redis.port=4444
